src/MEGASync/gui/style/WidgetsComponentsStyleSheets.css
/* ... */
QRadioButton::indicator:checked:pressed
{
image: url(:/images/themed/light/radio_checked_pressed.svg); /*replaceThemeToken*/
}

QRadioButton::indicator:checked:disabled
{
image: url(:/images/themed/light/radio_checked_disabled.svg); /*replaceThemeToken*/
}

/*
    QGroupBox
*/
QGroupBox[type="mega"]
{
font-weight: bold;
margin-top: 25px;
background-color: transparent;
border-width: 1px;
border-style: solid;
border-radius: 12px;
border-color: #ffd8d9db; /*colorToken.border-strong*/
}

QGroupBox::title[type="mega"]
{
color: #ff04101E; /*colorToken.text-accent*/
subcontrol-origin: margin;
subcontrol-position: top left;
padding: 5 0 0 5px;
}

QGroupBox::title:disabled[type="mega"]
{
color: #ff797c80; /*colorToken.text-disabled*/
}

/*
    QProgressBar
*/
QProgressBar
{
/* TODO: surface-2 should be replaced by --color-indicator-background */
border-style: none;
border-radius: 4px;
background-color: #fff3f4f4; /*colorToken.surface-2*/
max-height: 8px;
}

QProgressBar::chunk
{
background-color: #ff09bf5b; /*colorToken.indicator-green*/
border-radius: 4px;
}

/*
    QCheckBox
*/
QCheckBox[type="mega"]
{
background-color: transparent;
spacing: 8px;
}

QCheckBox:disabled[type="mega"]
{
color: #ff797c80; /*colorToken.icon-disabled*/
}

QCheckBox::indicator[type="mega"]
{
height: 16px;
width: 16px;
border-style: none;
}

QCheckBox::indicator:checked[type="mega"]
{
image: url(:/images/themed/light/checkbox_on.svg); /*replaceThemeToken*/
}

QCheckBox::indicator:checked:hover[type="mega"]
{
image: url(:/images/themed/light/checkbox_on_hover.svg); /*replaceThemeToken*/
}

QCheckBox::indicator:checked:pressed[type="mega"]
{
image: url(:/images/themed/light/checkbox_on_pressed.svg); /*replaceThemeToken*/
}

QCheckBox::indicator:checked:disabled[type="mega"]
{
image: url(:/images/themed/light/checkbox_on_disabled.svg); /*replaceThemeToken*/
}

QCheckBox::indicator:unchecked[type="mega"]
{
image: url(:/images/themed/light/checkbox_off.svg); /*replaceThemeToken*/
}

QCheckBox::indicator:unchecked:hover[type="mega"]
{
image: url(:/images/themed/light/checkbox_off_hover.svg); /*replaceThemeToken*/
}

QCheckBox::indicator:unchecked:pressed[type="mega"]
{
image: url(:/images/themed/light/checkbox_off_pressed.svg); /*replaceThemeToken*/
}

QCheckBox::indicator:unchecked:disabled[type="mega"]
{
image: url(:/images/themed/light/checkbox_off_disabled.svg); /*replaceThemeToken*/
}

/*
    QLabel
*/
QLabel
{
font-family: Inter;
font-size: 12px;
font-weight: 400;
background-color: transparent;
color: #ff303233; /*colorToken.text-primary*/
}

QLabel[type="sub-title"]
{
font-size: 14px;
font-weight: 600;
}

QLabel[type="title"]
{
font-size: 16px;
font-weight: 600;
}

QLabel:disabled
{
color: #ff797c80; /*colorToken.icon-disabled*/
}

/*
    Outline button.
*/
QPushButton[type="outline"]
{
border-width: 2px;
border-style: solid;
font-family: Inter;
font-weight: 600;

background-color: transparent;
color: #ff04101E; /*colorToken.button-outline*/
border-color: #ff04101E; /*colorToken.button-outline*/
}

QPushButton[type="outline"][dimension=small]
{
border-radius: 6px;
font-size: 12px;
padding-left: 8px;
padding-right: 8px;
padding-top: 4px;
padding-bottom: 4px;
}

QPushButton[type="outline"][dimension=medium]
{
border-radius: 6px;
font-size: 14px;
padding-left: 16px;
padding-right: 16px;
padding-top: 8px;
padding-bottom: 8px;
}

QPushButton[type="outline"][dimension=large]
{
border-radius: 8px;
font-size: 16px;
padding-left: 24px;
padding-right: 24px;
padding-top: 12px;
padding-bottom: 12px;
}

QPushButton:hover[type="outline"]
{
color: #ff39424E; /*colorToken.button-outline-hover*/
border-color: #ff39424E; /*colorToken.button-outline-hover*/
}

QPushButton:pressed[type="outline"]
{
color: #ff535B65; /*colorToken.button-outline-pressed*/
border-color: #ff535B65; /*colorToken.button-outline-pressed*/
}

QPushButton:disabled[type="outline"]
{
color: #ffC1C2C4; /*colorToken.text-disabled*/
border-color: #ff494a4d; /*colorToken.border-disabled*/
}

/*
    Primary button.
*/
QPushButton[type="primary"]
{
border-width: 2px;
border-style: solid;
font-family: Inter;
font-weight: 600;

background-color: #ff04101E; /*colorToken.button-primary*/
color: #ffFAFAFB; /*colorToken.text-inverse-accent*/
border-color: #ff04101E; /*colorToken.button-primary*/
}

QPushButton[type="primary"][dimension=small]
{
border-radius: 6px;
font-size: 12px;
padding-left: 8px;
padding-right: 8px;
padding-top: 4px;
padding-bottom: 4px;
}

QPushButton[type="primary"][dimension=medium]
{
border-radius: 6px;
font-size: 14px;
padding-left: 16px;
padding-right: 16px;
padding-top: 8px;
padding-bottom: 8px;
}

QPushButton[type="primary"][dimension=large]
{
border-radius: 8px;
font-size: 16px;
padding-left: 24px;
padding-right: 24px;
padding-top: 12px;
padding-bottom: 12px;
}

QPushButton:hover[type="primary"]
{
color: #ffFAFAFB; /*colorToken.text-inverse-accent*/
background-color: #ff39424E; /*colorToken.button-primary-hover*/
border-color: #ff39424E; /*colorToken.button-primary-hover*/
}

QPushButton:pressed[type="primary"]
{
color: #ffFAFAFB; /*colorToken.text-inverse-accent*/
background-color: #ff535B65; /*colorToken.button-primary-pressed*/
border-color: #ff535B65; /*colorToken.button-primary-pressed*/
}

QPushButton:disabled[type="primary"]
{
color: #ffC1C2C4; /*colorToken.text-disabled*/
background-color: #ff797c80; /*colorToken.button-disabled*/
border-color: transparent;
}

/*
    Secondary button.
*/
QPushButton[type="secondary"]
{
border-width: 2px;
border-style: solid;
font-family: Inter;
font-weight: 600;

background-color: #ff04101E; /*colorToken.button-secondary*/
color: #ffFAFAFB; /*colorToken.text-secondary*/
border-color: #ff04101E; /*colorToken.button-secondary*/
}

QPushButton[type="secondary"][dimension=small]
{
border-radius: 6px;
font-size: 12px;
padding-left: 8px;
padding-right: 8px;
padding-top: 4px;
padding-bottom: 4px;
}
/* ... */

